# ChangeLog for www-misc/bookmarksync
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-misc/bookmarksync/ChangeLog,v 1.15 2012/12/28 11:22:11 ago Exp $

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org> bookmarksync-0.3.4-r2.ebuild:
  Stable for ppc, wrt bug #391601

  27 Dec 2012; Sergey Popov <pinkbyte@gentoo.org> bookmarksync-0.3.4-r2.ebuild:
  Add ~amd64 keyword, wrt bug #391601

  28 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  bookmarksync-0.3.4-r2.ebuild:
  x86 stable wrt bug #391601

*bookmarksync-0.3.4-r2 (28 Sep 2010)

  28 Sep 2010; Jeroen Roovers <jer@gentoo.org>
  +bookmarksync-0.3.4-r2.ebuild:
  Respect LDFLAGS (bug #335049), CC, CFLAGS. Fix dodoc path.

  20 Jul 2010; Michael Sterrett <mr_bones_@gentoo.org>
  -bookmarksync-0.3.1.ebuild, -bookmarksync-0.3.2.ebuild,
  -bookmarksync-0.3.3.ebuild, -bookmarksync-0.3.4.ebuild:
  clean old cruft

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> bookmarksync-0.3.1.ebuild,
  bookmarksync-0.3.2.ebuild, bookmarksync-0.3.3.ebuild,
  bookmarksync-0.3.4.ebuild, bookmarksync-0.3.4-r1.ebuild:
  Remove virtual/libc

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Josh Glover (jmglov, #206782) from metadata.xml.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  bookmarksync-0.3.1.ebuild, bookmarksync-0.3.2.ebuild,
  bookmarksync-0.3.3.ebuild, bookmarksync-0.3.4.ebuild,
  bookmarksync-0.3.4-r1.ebuild:
  (QA) RESTRICT clean up.

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  13 Mar 2007; Raúl Porcel <armin76@gentoo.org>
  bookmarksync-0.3.4-r1.ebuild:
  x86 stable

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

*bookmarksync-0.3.4-r1 (26 Aug 2006)

  26 Aug 2006; Alec Warner <antarus@gentoo.org>
  +bookmarksync-0.3.4-r1.ebuild:
  doexe to dobin for bug # 101521

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.