@@ -1,5 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST bookmarksync-0.3.4.tar.gz 14324 SHA256 3111f55a8b1f6dd4d2f343bef4d15b58186a429505760ac8f38e2c4e4592fba8 SHA512 97464e32e9c21010eccf34b9bc94ce67d20f9b7a1f00b4e10e7096c0bde527a8b2a83a05c8623aa009fa0ab1895b025241aba2dfaf6881755bf05682b9e710d0 WHIRLPOOL 9a93d1f06c1dcab0da5c7df437b2d6a18e69d70fba0668ea3a7c59a2f96e30fe6189ea72ca57a8eab40baa31b579866abb81fc3c50d7ce15a3b474c43369c364
-EBUILD bookmarksync-0.3.4-r1.ebuild 780 SHA256 a05ccfec75dc4a2ce5de404c3ae71ee4726a72d4436ab52dc355b0727703b2e2 SHA512 9a912783253b29869df20676d70673ea7cbb1ec54aeccbbca1abf79d8b296b0265accf7904532e5ccd68ac76e73c8de23148fb1426962537f057985e6a83c891 WHIRLPOOL d78dad62463d7bb36272feb2830e15a1752df7cbe7a105a2d1660d8b19de460fbb6ad80696c7a0ce72912a461a80ff83ceb68edcf58d5984c27517738d5e1c16
 EBUILD bookmarksync-0.3.4-r2.ebuild 966 SHA256 6c2183ed736e7aeef27ae483fa90008ba1b1bb5b31d8de6cf25060cecbc88c30 SHA512 1246bc026339ec538598b8d55d33e147919947039a88f45481abf0f9279a2513bf7b8d4536b17d21d8c86438955cdb44ffcffa964f55fbcb8897315563059b47 WHIRLPOOL 7af451212380b26f6b3710911724d83a18d1c0b67531b6b7520e7d4beabcda75d44d9e9cc245ac0bb0ab669d3139d877298c530cb4b853067a8acb1e64325107
-MISC ChangeLog 3854 SHA256 c9ea949f9037ffc6528ac103ba8834e6576d79651a7c9c641b7c177d5017ef03 SHA512 16c3145513092c5e1c81fca114b48634e0d057e42a90048fc6c942853d4d0477051eebcdac440c1dda85bd3f77e9f0ca36c3f5615d7bfef10ac81253f04639c2 WHIRLPOOL 3f2cb5aa9cfbff23d366607a8a1a41dd7dc17af8312c7bd4b303188498aeb08c265711643d3fa9aee3bd4bd9bf3d9a80e5b2f62b4e09af8379e61a10b2c0743c
+MISC ChangeLog 3965 SHA256 e13b67c25fd2a98d77194c7ff4e765cbb20242f85d2f0e7b44c9de9be413de4a SHA512 f17cd3ee68ac2a4d2ef0026e2d6859e2ec30c4892f69541ed0ea1fd41bcc1a51e27d8c366410ba2d14b081dda898644b34bf2565b65b1534d8a3529d7b9a053a WHIRLPOOL 4db4eb3bae7a74e59bf1ec948f8750bade3dd84cc3f28c1a3de76dda523cd5fda688e8ef229ccb976d70b3b4466a14d25693285b88dd45f5575f0bf261243cd0
 MISC metadata.xml 469 SHA256 b8347791915cfb0fbe1a3edadbe488ba9cb06ac1a30e1928274ecf849401bde5 SHA512 32114c42ff415382c1d3ba707024bf784333c7a0ff52fb60666296198cecf733ff3bed135270a8fea34ccad9a1953863aba5532fee65b6e6db271fdd918f3c55 WHIRLPOOL 6d9c740752e66c8d14abf4379186ab5c9803b7a769a8c6cebf41b7fe5884ddb3422545760fd6567e0b1765f630dcee482f8f74394473feb72254831ea0f4cfcc
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJQ3ZGaAAoJEMbwO6tnXQ0sol0IAJbBJOx2sYIG0pjP7mlvNQ/E
+SM3PDveIB7aQLHMTWETuDIOQa0OEZlSWvJv5qhl7hW0p2CsW8DZf9M/FPOBn35DW
+ntfPUEbRIHfr2alQzjEbragf9OdjK9OmJ8QssBBWD6LwUUYgcVKvsukvO7PW/dT1
+1mwB/ucS181NX7xJNUjtTrca4rzbTKZ7RyDQkgg1oRaXVVmSVpQz/co2b9NqeacS
+WDzht7MjkgtoONVtTshTo8ETKRVdRnb0rQ0Vpe3Z7KVY0aLXBN5xIFtKOuYa50ap
+QW+wTmUIRVeVvusVhCUDS/ayNLmvhbY6/1Zto7UwK41mCa1prN4+EfQlnWTTbGc=
+=BRkt
+-----END PGP SIGNATURE-----
